# gameboy

./: .gitignore  Cargo.toml  README.md  justfile
desktop/: Cargo.toml
desktop/src/: main.rs
gameboy/: Cargo.toml
gameboy/src/: addressable.rs  cartridge.rs  gameboy.rs  joypad.rs  lib.rs  timer.rs
gameboy/src/cpu/: mod.rs
gameboy/src/gpu/: color_id.rs  mod.rs  oam.rs  palette.rs  stat.rs  tile_data.rs  tile_map.rs
gameboy/src/mmu/: mod.rs
gui/: Cargo.toml
gui/src/: main.rs
gui/src/utils/: fs.rs
libgb/: Cargo.toml
libgb/src/: clock.rs  gameboy.rs  lib.rs  timer.rs
libgb/src/apu/: mod.rs
libgb/src/bus/: interrupts.rs  mod.rs
libgb/src/cpu/: mod.rs  registers.rs
libgb/src/gpu/: lcdc.rs  mod.rs  stat.rs
libgb/src/utils/: addressable.rs  mod.rs
src/: cartridge.rs  cpu.rs  emulator.rs  gpu.rs  instruction.rs  main.rs  mmu.rs  registers.rs  timer.rs  util.rs
src/apu/: mod.rs
src/cpu/: interrupts.rs  mod.rs  registers.rs
src/fs/: mod.rs
src/gpu/: lcdc.rs  mod.rs  stat.rs
src/memory/: interrupts.rs  mmu.rs  mod.rs
src/mmu/: interrupts.rs  mod.rs
