[package]
authors = ["Greg Jackson <gregtjack@pm.me>"]
edition = "2021"
name = "gameboy"
version = "0.1.0"

[dependencies]
clap = {version = "4.3.8", features = ["cargo"]}
color-eyre = "0.6.2"
egui = "0.22.0"
egui-wgpu = "0.22.0"
egui-winit = "0.22.0"
pixels = "0.13.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
winit = "0.28.6"
